did what i did yesterday. Listeassoc to be had in peer

--- a/annuaire-p2p/Makefile
+++ b/annuaire-p2p/Makefile
@@ -1,5 +1,5 @@
 FLAGS = -Wall -ansi -pedantic -std=c99
 all:
 	gcc $(FLAGS) -c	listAssoc.c
-	#gcc $(FLAGS) -o s server.c
-	gcc $(FLAGS) -o p pair.c
+	#gcc $(FLAGS) -o s server.c listAssoc.o
+	gcc $(FLAGS) -o p pair.c listAssoc.o
