to do serv side

--- a/annuaire-p2p/Makefile
+++ b/annuaire-p2p/Makefile
@@ -1,4 +1,4 @@
-FLAGS = -Wall -ansi -pedantic -std=c99
+FLAGS = -Wall -ansi -pedantic -std=c99 -lpthread
 all:
 	gcc $(FLAGS) -c	listAssoc.c
 	#gcc $(FLAGS) -o s server.c listAssoc.o
