--- a/annuaire-p2p/Makefile
+++ b/annuaire-p2p/Makefile
@@ -2,5 +2,5 @@ FLAGS = -Wall -ansi -pedantic -std=c99
 POSTFLAGS= -lpthread
 all:
 	gcc $(FLAGS) -c	listAssoc.c $(POSTFLAGS)
-	#gcc $(FLAGS) -o s server.c listAssoc.o
+	gcc $(FLAGS) -o a annuaire.c listAssoc.o
 	gcc $(FLAGS) -o p pair.c listAssoc.o $(POSTFLAGS)
